--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.3/particles.min.js" ></script>
-<!-- <link rel="stylesheet" href="./style.css"> -->
-<!-- <link rel="stylesheet" href="./main.css"> -->
 <link rel="stylesheet" href="css/main.css">
 
 </head>
@@ -109,7 +107,7 @@
   <p class="text body-end"></p>      
   <p class="text html-end"></p>  
 </body>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js'></script><script  src="./script.js"></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js'></script><script  src="js/script.js"></script>
 
 </body>
 </html>
