--- a/secondary-index.html
+++ b/secondary-index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
 
@@ -25,7 +25,6 @@
         <br />
         <h2 id="clock">00:00:00</h2>
         <h1 id="greeting" class="hidden"></h1>
-        <a href="go.com">go to course</a>
         <div id="weather">
             <span></span>
             <span></span>
@@ -34,6 +33,7 @@
             <span></span>
             <span></span>
         </div>
+        <a href="go.com">go to course</a>
     </div>
     <script src="js/app.js"></script>
     <script src="js/background.js"></script>
