--- a/secondary-index.html
+++ b/secondary-index.html
@@ -19,9 +19,7 @@
             <input required max-length="15
         " type="text" placeholder="write a to do and press enter" size="50">
         </form>
-        <ul id="todo-list">
-
-        </ul>
+        <ul id="todo-list"></ul>
         <br />
         <h2 id="clock">00:00:00</h2>
         <h1 id="greeting" class="hidden"></h1>
