--- a/index.html
+++ b/index.html
@@ -146,8 +146,7 @@
             <div id="gird-bottom--left" class="grid-box post-content">
             </div>
             <div id="hiddenContainer" class="hidden-container">
-              <iframe id="iframe" src=" " frameborder="0" width="100%" height="100%" target="_parent"
-                referrerpolicy="unsafe-url"></iframe>
+              <iframe id="iframe" src=" " frameborder="0" width="100%" height="100%" target="_parent"></iframe>
             </div>
           </div>
 
